--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "rollup"
   ],
   "dependencies": {
+    "@rollup/plugin-commonjs": "^13.0.0",
     "acorn": "^7.1.0",
-    "minimatch": "^3.0.4",
-    "rollup-plugin-commonjs": "^10.1.0"
+    "minimatch": "^3.0.4"
   },
   "author": "ashubham@gmail.com",
   "license": "MIT",
